--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <section class="links-section">
       <h2 class="section-title">Conecta conmigo</h2>
       <div class="links-grid">
-        <a class="link-card tiktok" href="https://www.tiktok.com/@_tagashy" target="_blank" rel="noopener">TikTok — @_tagashy</a>
-        <a class="link-card instagram" href="https://www.instagram.com/tagashy.tt" target="_blank" rel="noopener">Instagram — @tagashy.tt</a>
+        <a class="link-card tiktok" href="https://www.tiktok.com/@_tagashy" target="_blank" rel="noopener">TikTok</a>
+        <a class="link-card instagram" href="https://www.instagram.com/tagashy.tt" target="_blank" rel="noopener">Instagram</a>
         <a class="link-card payhip" href="https://payhip.com/tagashy" target="_blank" rel="noopener">Payhip</a>
         <a class="link-card pillar" href="https://pillar.io/tagashy" target="_blank" rel="noopener">Pillar</a>
         <a class="link-card portfolio" href="https://thesyxtwixtor.godaddysites.com/" target="_blank" rel="noopener">Proyectos</a>
@@ -153,3 +153,4 @@
   </script>
 </body>
 </html>
+
