--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h2 class="section-title">Contacto rápido</h2>
       <div class="contact-row">
         <!-- Reemplaza PHONE_NUMBER por tu número en formato internacional sin signos, ejemplo 573001234567 -->
-        <a class="whatsapp pulse" href="https://wa.me/50664682655text=Hola%20_tagashy" target="_blank" rel="noopener noreferrer" aria-label="Contactar por WhatsApp">WhatsApp</a>
+        <a class="whatsapp pulse" href="https://wa.me/50664682655" target="_blank" rel="noopener noreferrer" aria-label="Contactar por WhatsApp">WhatsApp</a>
         <a class="email" href="mailto:fainvfx@gmail.com" aria-label="Enviar correo">Email</a>
         <a class="hire" href="https://payhip.com/tagashy" target="_blank" rel="noopener noreferrer" aria-label="comprar">Compra</a>
       </div>
@@ -153,5 +153,6 @@
   </script>
 </body>
 </html>
+
 
 
