--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a class="link-card portfolio" href="https://thesyxtwixtor.godaddysites.com/" target="_blank" rel="noopener">Proyectos</a>
         <a class="link-card youtube" href="https://www.youtube.com/@_tagashy" target="_blank" rel="noopener">YouTube</a>
         <a class="link-card spotify" href="https://open.spotify.com/user/41tk6aum0rqacw6sqkpex9mrl?si=_ktmtx64S7Obt4ktgKTssQ&pi=PZx_0zLFRMqeW" target="_blank" rel="noopener">Spotify</a>
-      <a class="link-card wink app" href="https://play.google.com/store/apps/details?id=com.meitu.wink" target="_blank" rel="noopener">Wink</a>
+      <a class="link-card paypal" href="https://paypal.me/TayTagashy" target="_blank" rel="noopener">Wink</a>
         <a class="link-card winkit app" href="https://play.google.com/store/apps/details?id=com.starii.winkit" target="_blank" rel="noopener">Winkit</a>
     </div>
     </section>
@@ -153,6 +153,7 @@
   </script>
 </body>
 </html>
+
 
 
 
