Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="links-section">
       <h2 class="section-title">Conecta conmigo</h2>
       <div class="links-grid">
-        <a class="link-card tiktok" href="https://www.tiktok.com/@wmanubel?is_from_webapp=1&sender_device=pc" target="_blank" rel="noopener">TikTok</a>
+        <a class="link-card tiktok" href="tiktok.com/@_tagashy.tt" target="_blank" rel="noopener">TikTok</a>
         <a class="link-card instagram" href="https://www.instagram.com/tagashy.tt" target="_blank" rel="noopener">Instagram</a>
         <a class="link-card payhip" href="https://payhip.com/tagashy" target="_blank" rel="noopener">Payhip</a>
         <a class="link-card pillar" href="https://pillar.io/tagashy" target="_blank" rel="noopener">Pillar</a>
@@ -153,6 +153,7 @@
   </script>
 </body>
 </html>
+
 
 
 
