Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a class="link-card youtube" href="https://www.youtube.com/@_tagashy" target="_blank" rel="noopener">YouTube</a>
         <a class="link-card spotify" href="https://open.spotify.com/user/41tk6aum0rqacw6sqkpex9mrl?si=_ktmtx64S7Obt4ktgKTssQ&pi=PZx_0zLFRMqeW" target="_blank" rel="noopener">Spotify</a>
       <a class="link-card paypal" href="https://paypal.me/TayTagashy" target="_blank" rel="noopener">Paypal</a>
-        <a class="link-card TaoSqd" href="https://discord.gg/95Wnu5yhs6" target="_blank" rel="noopener">TaoSqd</a>
+        <a class="link-card discord" href="https://discord.gg/95Wnu5yhs6" target="_blank" rel="noopener">TaoSqd</a>
     </div>
     </section>
 
@@ -153,6 +153,7 @@
   </script>
 </body>
 </html>
+
 
 
 
